kubernetes/base/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: twilkin/powerpi-nginx
        ports:
          - containerPort: 8443
            name: https
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
